--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,46 @@
-version: "3.8"
-
+version: '3'
 services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus
+    hostname: prometheus
     volumes:
-      - ./prometheus:/prometheus
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus:/etc/prometheus
+      - metrics_data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yaml"
+      # https://example.com/prometheus のようにサブディレクトリを切る場合
+      #- '--web.external-url=/prometheus'
     ports:
       - 9090:9090
     restart: always
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:7.5.9
     container_name: grafana
+    hostname: grafana
     volumes:
-      - ./grafana_data:/var/lib/grafana
-      - ./grafana:/etc/grafana
+      - grafana_data:/var/lib/grafana
     ports:
       - 3000:3000
+    env_file:
+      - ./grafana/grafana.env
     restart: always
+  alertmanager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    hostname: alertmanager
+    volumes:
+      - ./alertmanager:/etc/alertmanager
+    command:
+      - "--config.file=/etc/alertmanager/config.yaml"
+      # https://example.com/alertmanager のようにサブディレクトリを切る場合
+      #- "--web.route-prefix=/alertmanager"
+    ports:
+      - 9093:9093
+    restart: always
+
+volumes:
+  metrics_data:
+    external: true
+  grafana_data:
+    external: true
